log
Thu, Mar 20, 2025  1:22:25 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:10:21 PM: 
 tests:  0|5
total_score: 0/70
5f434fc
Thu, Mar 20, 2025  5:52:46 PM: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c85a793
Thu, Mar 20, 2025  6:05:06 PM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6473e8a
Fri, Mar 21, 2025  6:15:54 PM: 
 tests:  3|2
total_score: 40/70
5206940
Fri, Mar 21, 2025  6:16:18 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  3|2
total_score: 40/70
1776ed6
Fri, Mar 21, 2025  6:17:22 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
8255ee2
Fri, Mar 21, 2025  6:30:40 PM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  6|1
total_score: 60/70
e6514f1
Fri, Mar 21, 2025  6:31:28 PM: 
 exercises.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  7|1
total_score: 60/70
a87d3cd
Fri, Mar 21, 2025  7:26:54 PM: 
 exercises.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(P1, cadena[i]);
                   ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:138:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pAux, cadena[i]);
                     ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
49be509
Fri, Mar 21, 2025  7:29:21 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(P1, cadena[i]);
                   ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:138:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pAux, cadena[i]);
                     ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
223791f
Fri, Mar 21, 2025  8:09:16 PM: 
 exercises.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pAux, cadena[i]);
                     ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c6af471
Fri, Mar 21, 2025  8:10:55 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:135:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pAux, cadena[i]);
                     ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
24a3169
Fri, Mar 21, 2025  8:38:42 PM: 
 exercises.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pAux, cadena[i]);
                     ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:150:19: error: comparison between pointer and integer [-Werror]
          if(Char1 == '(' && Char2 != ')') return 0;
                   ^~
exercises.c:150:35: error: comparison between pointer and integer [-Werror]
          if(Char1 == '(' && Char2 != ')') return 0;
                                   ^~
exercises.c:151:19: error: comparison between pointer and integer [-Werror]
          if(Char1 == '{' && Char2 != '}') return 0;
                   ^~
exercises.c:151:35: error: comparison between pointer and integer [-Werror]
          if(Char1 == '{' && Char2 != '}') return 0;
                                   ^~
exercises.c:152:19: error: comparison between pointer and integer [-Werror]
          if(Char1 == '[' && Char2 != ']') return 0;
                   ^~
exercises.c:152:35: error: comparison between pointer and integer [-Werror]
          if(Char1 == '[' && Char2 != ']') return 0;
                                   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
1f54a85
Fri, Mar 21, 2025  8:40:32 PM: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(P1, cadena[i]);
                   ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:151:19: error: comparison between pointer and integer [-Werror]
          if(Char1 == '(' && Char2 != ')') return 0;
                   ^~
exercises.c:151:35: error: comparison between pointer and integer [-Werror]
          if(Char1 == '(' && Char2 != ')') return 0;
                                   ^~
exercises.c:152:19: error: comparison between pointer and integer [-Werror]
          if(Char1 == '{' && Char2 != '}') return 0;
                   ^~
exercises.c:152:35: error: comparison between pointer and integer [-Werror]
          if(Char1 == '{' && Char2 != '}') return 0;
                                   ^~
exercises.c:153:19: error: comparison between pointer and integer [-Werror]
          if(Char1 == '[' && Char2 != ']') return 0;
                   ^~
exercises.c:153:35: error: comparison between pointer and integer [-Werror]
          if(Char1 == '[' && Char2 != ']') return 0;
                                   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
5e42898
Fri, Mar 21, 2025  9:10:16 PM: 
 exercises.c | 42 ++++++++++++++----------------------------
 1 file changed, 14 insertions(+), 28 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:12: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
          c = cadena[i];
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
a6a68fd
Fri, Mar 21, 2025  9:11:19 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:12: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
          c = cadena[i];
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
227b722
Fri, Mar 21, 2025  9:16:55 PM: 
 exercises.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:141:30: error: suggest parentheses around '&&' within '||' [-Werror=parentheses]
          if(cadena[i] == ')' && *Parent != '(' || cadena[i] == '}' && *Parent != '{' || cadena[i] == ']' && *Parent != '['){
             ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
exercises.c:141:106: error: suggest parentheses around '&&' within '||' [-Werror=parentheses]
          if(cadena[i] == ')' && *Parent != '(' || cadena[i] == '}' && *Parent != '{' || cadena[i] == ']' && *Parent != '['){
                                                                                         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2019906
